--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:server":"json-server server.json"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "json-server": "^0.17.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
